--- a/src/css/app.css
+++ b/src/css/app.css
@@ -361,3 +361,11 @@ html body {
   width: 100%;
   height: 100%;
 }
+.sections {
+  width: 100%;
+  height: 100%;
+}
+.sections .section {
+  width: 100%;
+  height: 100%;
+}
