--- a/src/less/global.less
+++ b/src/less/global.less
@@ -6,3 +6,11 @@ html{
     height: 100%;
   }
 }
+.sections{
+  width: 100%;
+  height: 100%;
+  .section{
+    width: 100%;
+    height: 100%;
+  }
+}
