--- a/src/less/fullpage.less
+++ b/src/less/fullpage.less
@@ -1,21 +1,21 @@
 html {
   width: 100%;
   height: 100%;
+  body {
+    width: 100%;
+    height: 100%;
+  }
 }
-html body {
-  width: 100%;
-  height: 100%;
-}
+
 .sections {
   width: 100%;
   height: 100%;
   position: relative;
   box-sizing: border-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
   display: flex;
-}
-.sections .section {
-  width: 100%;
-  height: 100%;
+  //overflow: hidden;
+  .section {
+    width: 100%;
+    height: 100%;
+  }
 }
