搭个大概框架

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,21 +1,33 @@
-html {
+html,
+body,
+.section-content,
+.section {
   width: 100%;
   height: 100%;
+  margin: 0;
+  padding: 0;
 }
-html body {
-  width: 100%;
-  height: 100%;
+
+body {
+  overflow: hidden;
 }
 .sections {
-  width: 100%;
-  height: 100%;
-  position: relative;
   box-sizing: border-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
 }
-.sections .section {
-  width: 100%;
-  height: 100%;
+
+.section {
+  font-size: 100px;
+  text-align: center;
+}
+
+.section:nth-child(1) {
+  background: #bd1818;
+}
+
+.section:nth-child(2) {
+  background: #1f18bd;
+}
+
+.section:nth-child(3) {
+  background: #bd8d18;
 }
