--- a/src/less/fullpage.less
+++ b/src/less/fullpage.less
@@ -1,21 +1,13 @@
-html {
+html, body, .section-content, .section {
   width: 100%;
   height: 100%;
-  body {
-    width: 100%;
-    height: 100%;
-  }
+  margin: 0;
+  padding: 0;
 }
 
+body {
+  overflow: hidden;
+}
 .sections {
-  width: 100%;
-  height: 100%;
-  position: relative;
   box-sizing: border-box;
-  display: flex;
-  //overflow: hidden;
-  .section {
-    width: 100%;
-    height: 100%;
-  }
 }
