--- a/src/less/setting.less
+++ b/src/less/setting.less
@@ -2,3 +2,19 @@
 @red: #BD1818;
 @blue: #1F18BD;
 @orange: #BD8D18;
+.section {
+  font-size: 100px;
+  text-align: center;
+}
+
+.section:nth-child(1) {
+  background: @red;
+}
+
+.section:nth-child(2) {
+  background: @blue;
+}
+
+.section:nth-child(3) {
+  background: @orange;
+}
