--- a/src/less/fullpage.less
+++ b/src/less/fullpage.less
@@ -8,6 +8,9 @@ html, body, .section-content, .section {
 body {
   overflow: hidden;
 }
+.section-content{
+  transition: all .5s;
+}
 .sections {
   box-sizing: border-box;
 }
