--- a/src/less/setting.less
+++ b/src/less/setting.less
@@ -7,14 +7,14 @@
   text-align: center;
 }
 
-.section:nth-child(1) {
-  background: @red;
-}
-
-.section:nth-child(2) {
-  background: @blue;
-}
-
-.section:nth-child(3) {
-  background: @orange;
-}
+//.section:nth-child(1) {
+//  background: @red;
+//}
+//
+//.section:nth-child(2) {
+//  background: @blue;
+//}
+//
+//.section:nth-child(3) {
+//  background: @orange;
+//}
