--- a/src/less/setting.less
+++ b/src/less/setting.less
@@ -6,7 +6,9 @@
   font-size: 100px;
   text-align: center;
 }
-
+.slide{
+  font-size: 100px;
+}
 //.section:nth-child(1) {
 //  background: @red;
 //}
