--- a/src/less/fullpage.less
+++ b/src/less/fullpage.less
@@ -1,28 +1,32 @@
-html,
-body,
-.section-content,
-.section {
+html, body {
   width: 100%;
   height: 100%;
+  overflow: hidden;
+  padding: 0;
+  margin: 0;
+}
+
+.section-content {
   margin: 0;
   padding: 0;
-}
-
-body {
-  overflow: hidden;
-}
-
-.section-content,
-.slide-wrap {
   transition: all .5s;
   -webkit-transition: all .5s;
   -moz-transition: all .5s;
-  height: 100%;
-  width: auto;
-  .slide {
-    display: inline-block;
+  .section {
     height: 100%;
-    float: left;
+    .slide-wrap {
+      transition: all .5s;
+      -webkit-transition: all .5s;
+      -moz-transition: all .5s;
+      height: 100%;
+      width: auto;
+      .slide {
+        display: inline-block;
+        height: 100%;
+        float: left;
+      }
+    }
   }
 }
+
 
