--- a/src/less/app.less
+++ b/src/less/app.less
@@ -1,8 +1,9 @@
+@import 'fullpage';
 @import 'normalize';
 @import 'mixins';
 @import 'setting';
 @import 'global';
-@import 'fullpage';
+@import 'icon';
 @import 'components/split-line';
 @import 'components/double-circle';
 @import 'components/balloon';
@@ -10,5 +11,4 @@
 //pages
 @import 'pages/distribution';
 @import 'pages/keywords';
-@import 'pages/overview';
 @import 'pages/variation';
