--- a/src/less/global.less
+++ b/src/less/global.less
@@ -14,12 +14,20 @@ body {
   .border-box();
 }
 
+@media screen and(min-width: 600px) {
+  * {
+    text-align: center;
+  }
+}
 ul {
   list-style: none;
   padding: 0;
   margin: 0;
 }
 
+a {
+  color: #fff;
+}
 .section .wrap {
   width: 100%;
   height: 100%;
@@ -36,10 +44,6 @@ ul {
   width: 100%;
   height: 100%;
   background-color: #fff;
-}
-
-#fullpage {
-  display: none;
 }
 
 .wrong-dialog {
