添加导航按钮控制；页面激活时添加‘active'的class

--- a/less/pages/distribution.less
+++ b/less/pages/distribution.less
@@ -1,8 +1,8 @@
 .distribution {
   color: #fff;
   width: 100%;
-  .slide-wrap {
-    .slide {
+  .fp-slide-wrap {
+    .fp-slide {
       text-align: center;
       margin-top: 20px;
     }
