--- a/src/css/app.css
+++ b/src/css/app.css
@@ -7,17 +7,17 @@ body {
   height: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
-.section-content {
+.fp-section-content {
   margin: 0;
   padding: 0;
   transition: all 0.5s ease-in-out;
 }
-.section-content .section {
+.fp-section-content .fp-section {
   height: 100%;
   position: relative;
   overflow: hidden;
 }
-.section-content .section .slide-wrap {
+.fp-section-content .fp-section .fp-slide-wrap {
   transition: all 0.5s ease-in-out;
   -webkit-transition: all 0.5s ease-in-out;
   -moz-transition: all 0.5s ease-in-out;
@@ -25,10 +25,32 @@ body {
   width: auto;
   position: relative;
 }
-.section-content .section .slide-wrap .slide {
+.fp-section-content .fp-section .fp-slide-wrap .fp-slide {
   display: inline-block;
   height: 100%;
   float: left;
+}
+.fp-controller {
+  position: fixed;
+  right: 10px;
+  width: 10px;
+  height: 200px;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+}
+.fp-controller .fp-controller-dotted {
+  width: 10px;
+  height: 10px;
+  margin-bottom: 10px;
+  border-radius: 50%;
+  background: #fff;
+  border: 1px solid #000;
+  transition: all 0.5s ease-in-out;
+}
+.fp-controller .fp-controller-dotted.active {
+  background: #000;
+  border-color: #fff;
 }
 /*! normalize.css v3.0.2 | MIT License | git.io/normalize */
 html {
@@ -661,7 +683,7 @@ i.icon {
   color: #fff;
   width: 100%;
 }
-.distribution .slide-wrap .slide {
+.distribution .fp-slide-wrap .fp-slide {
   text-align: center;
   margin-top: 20px;
 }
