--- a/demo/demo01/css/app.css
+++ b/demo/demo01/css/app.css
@@ -1,57 +1,3 @@
-html,
-body {
-  overflow: hidden;
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  height: 100%;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-}
-.fp-section-content {
-  margin: 0;
-  padding: 0;
-  transition: all 0.5s ease-in-out;
-}
-.fp-section-content .fp-section {
-  height: 100%;
-  position: relative;
-  overflow: hidden;
-}
-.fp-section-content .fp-section .fp-slide-wrap {
-  transition: all 0.5s ease-in-out;
-  -webkit-transition: all 0.5s ease-in-out;
-  -moz-transition: all 0.5s ease-in-out;
-  height: 100%;
-  width: auto;
-  position: relative;
-}
-.fp-section-content .fp-section .fp-slide-wrap .fp-slide {
-  display: inline-block;
-  height: 100%;
-  float: left;
-}
-.fp-controller {
-  position: fixed;
-  right: 10px;
-  width: 10px;
-  height: 200px;
-  top: 50%;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
-}
-.fp-controller .fp-controller-dotted {
-  width: 10px;
-  height: 10px;
-  margin-bottom: 10px;
-  border-radius: 50%;
-  background: #fff;
-  border: 1px solid #000;
-  transition: all 0.5s ease-in-out;
-}
-.fp-controller .fp-controller-dotted.active {
-  background: #000;
-  border-color: #fff;
-}
 /*! normalize.css v3.0.2 | MIT License | git.io/normalize */
 html {
   font-family: sans-serif;
@@ -142,6 +88,7 @@ figure {
   margin: 1em 40px;
 }
 hr {
+  -moz-box-sizing: content-box;
   box-sizing: content-box;
   height: 0;
 }
@@ -201,6 +148,8 @@ input[type="number"]::-webkit-outer-spin-button {
 }
 input[type="search"] {
   -webkit-appearance: textfield;
+  -moz-box-sizing: content-box;
+  -webkit-box-sizing: content-box;
   box-sizing: content-box;
 }
 input[type="search"]::-webkit-search-cancel-button,
@@ -251,19 +200,32 @@ th {
   color: #fff;
 }
 .pink {
-  color: #6daebc;
+  color: #6DAEBC;
 }
 html {
   font-size: 62.5%;
+  height: 100%;
 }
 body {
   font-family: Arial, "微软雅黑", sans-serif;
-  color: #ffffff;
+  color: #fff;
   background-image: url('../images/bg.jpg');
   background-size: 100% 100%;
   font-size: 1.6rem;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  transition: all 0.5s ease-in-out;
+}
+.fp-wrap {
+  width: 100%;
+  height: 100%;
 }
 * {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
 @media screen and (min-width: 600px) {
@@ -369,18 +331,22 @@ i.icon {
   position: absolute;
   width: 8rem;
   height: 8rem;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
   border-radius: 50%;
+  -webkit-background-clip: padding-box;
+  -moz-background-clip: padding-box;
   background-clip: padding-box;
   text-align: center;
   line-height: 8rem;
-  background-color: #f868b6;
+  background-color: #F868B6;
 }
 .balloon-pink:before {
   content: '';
   position: absolute;
   width: 4px;
   height: 4px;
-  background-color: #f868b6;
+  background-color: #F868B6;
   bottom: -2px;
   left: 50%;
   margin-left: -4px;
@@ -394,7 +360,7 @@ i.icon {
   font-size: 0;
   line-height: 0;
   overflow: hidden;
-  border-color: transparent transparent #f868b6 transparent;
+  border-color: transparent transparent #F868B6 transparent;
   border-style: dashed dashed solid dashed;
   border-width: 0 4px 4px 4px;
   bottom: -4px;
@@ -416,18 +382,22 @@ i.icon {
   position: absolute;
   width: 8rem;
   height: 8rem;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
   border-radius: 50%;
+  -webkit-background-clip: padding-box;
+  -moz-background-clip: padding-box;
   background-clip: padding-box;
   text-align: center;
   line-height: 8rem;
-  background-color: #e27dfc;
+  background-color: #E27DFC;
 }
 .balloon-purple:before {
   content: '';
   position: absolute;
   width: 4px;
   height: 4px;
-  background-color: #e27dfc;
+  background-color: #E27DFC;
   bottom: -2px;
   left: 50%;
   margin-left: -4px;
@@ -441,7 +411,7 @@ i.icon {
   font-size: 0;
   line-height: 0;
   overflow: hidden;
-  border-color: transparent transparent #e27dfc transparent;
+  border-color: transparent transparent #E27DFC transparent;
   border-style: dashed dashed solid dashed;
   border-width: 0 4px 4px 4px;
   bottom: -4px;
@@ -460,26 +430,29 @@ i.icon {
   z-index: -9999;
 }
 .balloon-purple .balloon-line {
-  -webkit-transform: rotateY(180deg);
-          transform: rotateY(180deg);
+  transform: rotateY(180deg);
   margin-left: -14px;
 }
 .balloon-green {
   position: absolute;
   width: 8rem;
   height: 8rem;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
   border-radius: 50%;
+  -webkit-background-clip: padding-box;
+  -moz-background-clip: padding-box;
   background-clip: padding-box;
   text-align: center;
   line-height: 8rem;
-  background-color: #61d6c8;
+  background-color: #61D6C8;
 }
 .balloon-green:before {
   content: '';
   position: absolute;
   width: 4px;
   height: 4px;
-  background-color: #61d6c8;
+  background-color: #61D6C8;
   bottom: -2px;
   left: 50%;
   margin-left: -4px;
@@ -493,7 +466,7 @@ i.icon {
   font-size: 0;
   line-height: 0;
   overflow: hidden;
-  border-color: transparent transparent #61d6c8 transparent;
+  border-color: transparent transparent #61D6C8 transparent;
   border-style: dashed dashed solid dashed;
   border-width: 0 4px 4px 4px;
   bottom: -4px;
@@ -515,18 +488,22 @@ i.icon {
   position: absolute;
   width: 8rem;
   height: 8rem;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
   border-radius: 50%;
+  -webkit-background-clip: padding-box;
+  -moz-background-clip: padding-box;
   background-clip: padding-box;
   text-align: center;
   line-height: 8rem;
-  background-color: #f99f64;
+  background-color: #F99F64;
 }
 .balloon-orange:before {
   content: '';
   position: absolute;
   width: 4px;
   height: 4px;
-  background-color: #f99f64;
+  background-color: #F99F64;
   bottom: -2px;
   left: 50%;
   margin-left: -4px;
@@ -540,7 +517,7 @@ i.icon {
   font-size: 0;
   line-height: 0;
   overflow: hidden;
-  border-color: transparent transparent #f99f64 transparent;
+  border-color: transparent transparent #F99F64 transparent;
   border-style: dashed dashed solid dashed;
   border-width: 0 4px 4px 4px;
   bottom: -4px;
@@ -591,7 +568,11 @@ i.icon {
   margin-right: 10px;
   width: 20px;
   height: 20px;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
   border-radius: 50%;
+  -webkit-background-clip: padding-box;
+  -moz-background-clip: padding-box;
   background-clip: padding-box;
   position: relative;
   background-color: rgba(255, 255, 255, 0.08);
@@ -601,12 +582,18 @@ i.icon {
   display: inline-block;
   width: 6px;
   height: 6px;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
   border-radius: 50%;
+  -webkit-background-clip: padding-box;
+  -moz-background-clip: padding-box;
   background-clip: padding-box;
   position: absolute;
   top: 50%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   background-color: #c694ff;
 }
@@ -614,7 +601,11 @@ i.icon {
   margin-right: 10px;
   width: 20px;
   height: 20px;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
   border-radius: 50%;
+  -webkit-background-clip: padding-box;
+  -moz-background-clip: padding-box;
   background-clip: padding-box;
   position: relative;
   background-color: rgba(255, 255, 255, 0.08);
@@ -624,12 +615,18 @@ i.icon {
   display: inline-block;
   width: 6px;
   height: 6px;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
   border-radius: 50%;
+  -webkit-background-clip: padding-box;
+  -moz-background-clip: padding-box;
   background-clip: padding-box;
   position: absolute;
   top: 50%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   background-color: #00fcff;
 }
@@ -637,7 +634,11 @@ i.icon {
   margin-right: 10px;
   width: 20px;
   height: 20px;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
   border-radius: 50%;
+  -webkit-background-clip: padding-box;
+  -moz-background-clip: padding-box;
   background-clip: padding-box;
   position: relative;
   background-color: rgba(255, 255, 255, 0.08);
@@ -647,12 +648,18 @@ i.icon {
   display: inline-block;
   width: 6px;
   height: 6px;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
   border-radius: 50%;
+  -webkit-background-clip: padding-box;
+  -moz-background-clip: padding-box;
   background-clip: padding-box;
   position: absolute;
   top: 50%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   background-color: #f4ce74;
 }
@@ -660,7 +667,11 @@ i.icon {
   margin-right: 10px;
   width: 20px;
   height: 20px;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
   border-radius: 50%;
+  -webkit-background-clip: padding-box;
+  -moz-background-clip: padding-box;
   background-clip: padding-box;
   position: relative;
   background-color: rgba(255, 255, 255, 0.08);
@@ -670,14 +681,20 @@ i.icon {
   display: inline-block;
   width: 6px;
   height: 6px;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
   border-radius: 50%;
+  -webkit-background-clip: padding-box;
+  -moz-background-clip: padding-box;
   background-clip: padding-box;
   position: absolute;
   top: 50%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
-  background-color: #6daebc;
+  background-color: #6DAEBC;
 }
 .distribution {
   color: #fff;
@@ -697,6 +714,8 @@ i.icon {
   top: 64px;
   left: 50%;
   -webkit-transform: translate(-50%, 0);
+  -moz-transform: translate(-50%, 0);
+  -ms-transform: translate(-50%, 0);
   transform: translate(-50%, 0);
   padding: 20px 10px;
 }
@@ -705,10 +724,15 @@ i.icon {
   margin-top: -20px;
   position: relative;
   overflow: hidden;
+  -webkit-transition: all 0.4s;
+  -moz-transition: all 0.4s;
   transition: all 0.4s;
 }
 .distribution .box .circle-percent {
   position: absolute;
+  -webkit-transition: all .6s;
+  -moz-transition: all .6s;
+  -o-transition: all .6s;
   transition: all .6s;
 }
 .distribution .box .triangle {
@@ -760,24 +784,28 @@ i.icon {
   top: 14%;
   transition: all 1.4s ease-in-out;
   -webkit-animation: balloon-move 5s linear 0.1s infinite normal;
+  -moz-animation: balloon-move 5s linear 0.1s infinite normal;
   animation: balloon-move 5s linear 0.1s infinite normal;
 }
 .keywords.active .balloon-purple {
   top: 10%;
   transition: all 1.4s ease-in-out;
   -webkit-animation: balloon-move-reversed 5s linear 0.1s infinite normal;
+  -moz-animation: balloon-move-reversed 5s linear 0.1s infinite normal;
   animation: balloon-move-reversed 5s linear 0.1s infinite normal;
 }
 .keywords.active .balloon-green {
   top: 40%;
   transition: all 1.4s ease-in-out;
   -webkit-animation: balloon-move-reversed 5s linear 0.1s infinite normal;
+  -moz-animation: balloon-move-reversed 5s linear 0.1s infinite normal;
   animation: balloon-move-reversed 5s linear 0.1s infinite normal;
 }
 .keywords.active .balloon-orange {
   top: 34%;
   transition: all 1.4s ease-in-out;
   -webkit-animation: balloon-move 5s linear 0.1s infinite normal;
+  -moz-animation: balloon-move 5s linear 0.1s infinite normal;
   animation: balloon-move 5s linear 0.1s infinite normal;
 }
 .keywords .btn-wrap {
@@ -809,49 +837,72 @@ i.icon {
   width: 20%;
   height: 40px;
   background: #44396a;
-  background: -ms-linear-gradient(top, #443769, #433a6b);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#443769', endColorstr='#433a6b', GradientType=0);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #443769), color-stop(1, #433A6B));
+  background: -moz-linear-gradient(center top, #443769 0%, #433A6B 100%);
+  background: -ms-linear-gradient(top, #443769, #433A6B);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#443769', endColorstr='#433A6B', GradientType=0);
   position: absolute;
   left: 50%;
-  -webkit-transform: translate(-50%, 0);
-          transform: translate(-50%, 0);
+  transform: translate(-50%, 0);
   bottom: 4px;
 }
 @-webkit-keyframes balloon-move {
   0% {
     -webkit-transform: translate(-10%, 0);
+    -moz-transform: translate(-10%, 0);
+    -ms-transform: translate(-10%, 0);
     transform: translate(-10%, 0);
   }
   33% {
     -webkit-transform: translate(0, 10%);
+    -moz-transform: translate(0, 10%);
+    -ms-transform: translate(0, 10%);
     transform: translate(0, 10%);
   }
   66% {
     -webkit-transform: translate(0, -10%);
+    -moz-transform: translate(0, -10%);
+    -ms-transform: translate(0, -10%);
     transform: translate(0, -10%);
   }
   100% {
     -webkit-transform: translate(-10%, 0);
+    -moz-transform: translate(-10%, 0);
+    -ms-transform: translate(-10%, 0);
     transform: translate(-10%, 0);
   }
 }
 @-webkit-keyframes balloon-move-reversed {
   0% {
     -webkit-transform: translate(0, -10%);
+    -moz-transform: translate(0, -10%);
+    -ms-transform: translate(0, -10%);
     transform: translate(0, -10%);
   }
   33% {
     -webkit-transform: translate(10%, 0);
+    -moz-transform: translate(10%, 0);
+    -ms-transform: translate(10%, 0);
     transform: translate(10%, 0);
   }
   66% {
     -webkit-transform: translate(-10%, 0);
+    -moz-transform: translate(-10%, 0);
+    -ms-transform: translate(-10%, 0);
     transform: translate(-10%, 0);
   }
   100% {
     -webkit-transform: translate(0, -10%);
+    -moz-transform: translate(0, -10%);
+    -ms-transform: translate(0, -10%);
     transform: translate(0, -10%);
   }
+}
+.variation {
+  transition: all 0.6s ease-in-out;
+}
+.variation.active {
+  transform: rotate(360deg);
 }
 .variation .des .ht-user {
   list-style: circle;
